--- a/padariacristal/index.html
+++ b/padariacristal/index.html
@@ -1,15 +1,26 @@
-<html>
-  <head>
-    <title>
-      Padaria Cristal
-    </title>
-  </head>
-  <body>
-    <h1>
-      Padaria Cristal
-    </h1>
-    <p>
-      Cardápio
-    </p>
-  </body>
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Padaria Cristal</title>
+    <link rel="stylesheet" href="/padariacristal/elementos/css/style.css">
+</head>
+<body>
+    <header>
+        <img src="/padariacristal/elementos/imagens/logo.png" alt="Logo da Padaria Cristal">
+        <h1>Padaria Cristal</h1>
+    </header>
+
+    <main>
+        <h2>Nosso Cardápio</h2>
+        <ul id="menu">
+            <li>Pão Brioche</li>
+            <li>Pão Rústico</li>
+            <li>Pão com Calabresa</li>
+        </ul>
+    </main>
+
+    <script src="/padariacristal/elementos/js/script.js"></script>
+</body>
 </html>
