--- a/padariacristal/index.html
+++ b/padariacristal/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="/padariacristal/elementos/imagens/logo.png" alt="Logo da Padaria Cristal">
+        <img src="/elementos/imagens/logo.png" alt="Logo da Padaria Cristal">
         <h1>Padaria Cristal</h1>
     </header>
 
