--- a/padariacristal/index.html
+++ b/padariacristal/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Padaria Cristal</title>
-    <link rel="stylesheet" href="/padariacristal/elementos/css/style.css">
+    <link rel="stylesheet" href="/elementos/css/style.css">
 </head>
 <body>
     <header>
