--- a/padariacristal/index.html
+++ b/padariacristal/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="/elementos/imagens/logo.png" alt="Logo da Padaria Cristal">
+        <img src="/elementos/imagens/logo.png" alt="Logo da Padaria Cristal" class="logo">
         <h1>Padaria Cristal</h1>
     </header>
 
@@ -21,6 +21,10 @@
         </ul>
     </main>
 
-    <script src="/padariacristal/elementos/js/script.js"></script>
+    <footer>
+        <p>&copy; 2025 Padaria Cristal. Todos os direitos reservados.</p>
+    </footer>
+
+    <script src="/elementos/js/script.js"></script>
 </body>
 </html>
