--- a/padariacristal/index.html
+++ b/padariacristal/index.html
@@ -19,11 +19,7 @@
             <li>Pão Rústico</li>
             <li>Pão com Calabresa</li>
         </ul>
-    </main>
-
-    <footer>
-        <p>&copy; 2025 Padaria Cristal. Todos os direitos reservados.</p>
-    </footer>
+</body>
 
     <script src="/elementos/js/script.js"></script>
 </body>
